[package]
name = "as3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "as3"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["rlib","cdylib"]

[[bin]]
name = "as3"
path = "src/main.rs"

[dependencies]
rayon = "1.6.0"
regex = "1.7.0"
serde = {version= "1.0.147", features=["derive"]}
serde_json = "1.0.88"
serde_yaml = "0.9.14"
thiserror = "1.0.37"

pyo3 = { version = "0.17.3", features = ["extension-module"] }