[package]
name = "as3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "as3"

[[bin]]
name = "as3"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rayon = "1.6.0"
regex = "1.7.0"
serde = {version= "1.0.147", features=["derive"]}
serde_json = "1.0.88"
serde_yaml = "0.9.14"
thiserror = "1.0.37"
